--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,12 @@ yarn-error.log
 .expo/
 dist/
 web-build/
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
 
 # Environment variables
 .env
@@ -66,3 +72,20 @@ web-build/
 # Logs
 logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# iOS
+ios/Pods/
+ios/build/
+ios/Podfile.lock
+
+# Android
+android/app/build/
+android/build/
+android/gradle/
+android/local.properties
+android/.gradle/
+android/captures/
+android/app/release/
