--- a/package.json
+++ b/package.json
@@ -15,22 +15,30 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
-    "expo": "^52.0.0",
-    "expo-barcode-scanner": "~12.9.2",
-    "expo-camera": "~16.0.18",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "expo": "~52.0.0",
+    "expo-constants": "~17.0.0",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.0",
+    "expo-updates": "~0.27.0",
+    "react": "18.3.0",
+    "react-dom": "18.3.0",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13",
+    "react-native-web": "~0.19.6",
+    "webidl-conversions": "5.0.0",
+    "whatwg-url": "^14.2.0",
+    "whatwg-url-without-unicode": "^8.0.0-3",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-export-namespace-from": "^7.24.1",
+    "@react-native-community/cli": "^18.0.0",
     "@types/react": "~18.3.12",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
